--- a/index.html
+++ b/index.html
@@ -62,17 +62,20 @@
     <div class="w3-container" style="margin-top:1%" id="showcase">
       <h1 class="w3-jumbo w3-text-green"><b>Craig</b></h1>
       <hr style="width:50px;border:5px solid green" class="w3-round">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolorum aliquid quisquam ipsa fuga facere
-        impedit placeat quibusdam tempora autem distinctio officia commodi, necessitatibus sint nobis dicta eligendi
-        pariatur unde.</p>
+      <div class="w3-row-padding">
+        <div class="">
+          <img src="./images/craig.jpg" class="w3-circle" style="width:200px;height:100%;float: inline-end;"
+            onclick="onClick(this)" alt="Leo"> I live in Preston Circus and work from home part time. I miss having dogs
+          and this seems an ideal way to help others and enjoy the company of dogs.
+        </div>
+
+      </div>
     </div>
     <div class="w3-container" style="margin-top:30px" id="showcase">
       <h1 class="w3-jumbo w3-text-green"><b>My Childhood Dogs</b></h1>
       <h2 class="w3-jumbo w3-text-green"><b>Leo and Babette</b></h2>
       <hr style="width:50px;border:5px solid green" class="w3-round">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolorum aliquid quisquam ipsa fuga facere
-        impedit placeat quibusdam tempora autem distinctio officia commodi, necessitatibus sint nobis dicta eligendi
-        pariatur unde.</p>
+      <p>These are my childhood dogs and we always had dogs and cats throughout my childhood.</p>
     </div>
 
     <!-- Photo grid (modal) -->
@@ -87,9 +90,8 @@
     <div class="w3-container" style="margin-top:30px" id="showcase">
       <h1 class="w3-jumbo w3-text-green"><b>Fees and practices</b></h1>
       <hr style="width:50px;border:5px solid green" class="w3-round">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt dolorum aliquid quisquam ipsa fuga facere
-        impedit placeat quibusdam tempora autem distinctio officia commodi, necessitatibus sint nobis dicta eligendi
-        pariatur unde.</p>
+      <p>Fees are £10 per hour door-to-door and £15 for two dogs - your two or you and your friend.</p>
+      <p>Bartering also possible.</p>
     </div>
   </div>
   <!-- Footer -->
