--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="w3-container" style="margin-top:30px" id="showcase">
       <h1 class="w3-jumbo w3-text-green"><b>Fees and practices</b></h1>
       <hr style="width:50px;border:5px solid green" class="w3-round">
-      <p>Fees are £10 per hour door-to-door and £15 for two dogs - your two or you and your friend.</p>
+      <p>Fees are £10 per hour door-to-door and £15 for two dogs - your two dogsor your dog and your friend's dog.</p>
       <p>Bartering also possible.</p>
     </div>
   </div>
