--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
       </div>
     </div>
     <div class="w3-container" style="margin-top:30px" id="showcase">
+      <h1 class="w3-jumbo w3-text-green"><b>Process</b></h1>
+      <hr style="width:50px;border:5px solid green" class="w3-round">
+      <p>I have found the best way from experience is to meet up with you and your dog(s) so that we can all get to know
+        each other and see if schedules match etc.</p>
+      <p>Later, you can contact me if you wish to engage my services.</p>
+      <p>References are available so that you can contact people to reassure you.</p>
+    </div>
+    <div class="w3-container" style="margin-top:30px" id="showcase">
       <h1 class="w3-jumbo w3-text-green"><b>Fees and practices</b></h1>
       <hr style="width:50px;border:5px solid green" class="w3-round">
       <p>Fees are £10 per hour door-to-door and £15 for two dogs - your two dogs or your dog and your friend's dog.</p>
